<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_registrar_administrador"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_registrar_administrador" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_clientes" />
        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_citas" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_inventario" />
        <item
            android:id="@+id/nav_herramientas"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_herramientas" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_cerrar_sesion" />
    </group>

</menu>
